website: fix some spacing, add color animation to dl button [ci skip]

--- a/docs/css/styles.scss
+++ b/docs/css/styles.scss
@@ -90,12 +90,30 @@ hr {
   float: left;
 }
 
+$dl-button-transition-time: .4s;
+
 .dl-button {
   background-color: #ccc;
   border-radius: 3px;
   display: inline-block;
   padding: .1em .4em;
   margin-bottom: 1em;
+  transition: background-color $dl-button-transition-time;
+}
+
+.dl-button:hover {
+  background-color: #333;
+  transition: background-color $dl-button-transition-time;
+}
+
+.dl-button a {
+  -color: #333;
+  transition: color $dl-button-transition-time;
+}
+
+.dl-button:hover a {
+  color: #eee;
+  transition: color $dl-button-transition-time;
 }
 
 .feature-box {
@@ -105,8 +123,7 @@ hr {
   height: 16em;
   margin: auto;
   margin-bottom: 1em;
-  padding: .1em;
-  padding-left: .4em;
+  padding: .2em .2em .2em .8em;
 }
 
 .feature-box > div {
@@ -115,7 +132,7 @@ hr {
 
 .feature-box > div > div {
   float: left;
-  padding: 0 .5em;
+  padding: 0 .6em;
   text-align: center;
   width: 14%;
 }
@@ -126,7 +143,7 @@ hr {
   border-radius: 4px;
   margin: auto;
   margin-bottom: 1em;
-  padding: .4em;
+  padding: .2em 1em;
 }
 
 .sshot {
